gateway/shared.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: syawal-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.syawal.local"
      allowedRoutes:
        namespaces:
          from: All
