gateway/dev.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-dev
  namespace: bookslib-dev
spec:
  parentRefs:
    - name: syawal-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - auth-dev.syawal.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: auth-service
          port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: books-dev
  namespace: bookslib-dev
spec:
  parentRefs:
    - name: syawal-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - books-dev.syawal.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: books-service
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews-dev
  namespace: bookslib-dev
spec:
  parentRefs:
    - name: syawal-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - reviews-dev.syawal.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: reviews-service
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookslib-dev
  namespace: bookslib-dev
spec:
  parentRefs:
    - name: syawal-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - bookslib-dev.syawal.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
