gateway/prod.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth
  namespace: bookslib-prod
spec:
  parentRefs:
    - name: syawal-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - auth.syawal.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bookslib-prod-auth-service-auth-service
          port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: books
  namespace: bookslib-prod
spec:
  parentRefs:
    - name: syawal-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - books.syawal.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bookslib-prod-books-service-books-service
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
  namespace: bookslib-prod
spec:
  parentRefs:
    - name: syawal-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - reviews.syawal.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bookslib-prod-reviews-service-reviews-service
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookslib
  namespace: bookslib-prod
spec:
  parentRefs:
    - name: syawal-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - bookslib.syawal.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bookslib-prod-frontend-frontend
          port: 80
